# my_raft_kvdb

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  FINAL_SUMMARY.md  GET_TIMEOUT_FIX.md  QUICKSTART.md  README.md  UPDATES.md  raft理解or分布式理解.md  遇到的问题.md
.kiro/specs/raft-kv-store/: design.md  requirements.md  tasks.md
config/: cluster.conf  cluster_5node.conf
docs/: api-reference.md  architecture.md  conflict-resolution-detailed.md  deployment-guide.md  grpc-guide.md  integration-summary.md  leader-election-test-results.md  nextIndex-update-mechanism.md  performance-test-results.md  raft-algorithm.md  rpc-framework.md  skiplist-tutorial.md  skiplist.md  task-9.2-integration-testing-summary.md  task-9.2.2-summary.md  task-9.2.3-log-replication-test-results.md  task-9.2.4-crash-recovery-test-results.md  task-9.2.5-concurrent-clients-test-results.md  thread-architecture-improvement.md  troubleshooting.md
examples/: CMakeLists.txt  QUICKSTART.md  README.md  conflict_resolution_demo.cpp  nextindex_update_demo.cpp  rpc_demo.cpp
include/client/: kv_client.h  kv_client详解.md
include/network/: grpc_rpc_client.h  grpc_rpc_server.h  grpc详解.md  rpc_client.h  rpc_server.h  simple_rpc_client.h  simple_rpc_server.h
include/raft/: log_entry.h  raft_node.h  rpc_messages.h
include/storage/: command.h  kv_store.h  persister.h  skiplist.h
include/util/: config.h
proto/: raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h  raft.proto
scripts/: check_cluster.sh  restart_cluster.sh  start_cluster.sh  stop_cluster.sh  test_concurrent_clients.sh  test_crash_recovery.sh  test_log_replication.sh  test_log_replication_manual.sh  test_performance.sh
src/: CMakeLists.txt  kv_client_cli.cpp  raft_node_server.cpp
src/client/: CMakeLists.txt  kv_client.cpp
src/network/: CMakeLists.txt  grpc_rpc_client.cpp  grpc_rpc_server.cpp  rpc_factory.cpp  simple_rpc_client.cpp  simple_rpc_server.cpp
src/raft/: CMakeLists.txt  log_entry.cpp  raft_node.cpp
src/storage/: CMakeLists.txt  command.cpp  kv_store.cpp  persister.cpp
src/util/: CMakeLists.txt  config.cpp
test/: CMakeLists.txt  command_test.cpp  kv_client_test.cpp  kv_store_test.cpp  leader_election_integration_test.cpp  log_entry_test.cpp  log_replication_integration_test.cpp  log_replication_test.cpp  persister_test.cpp  raft_node_test.cpp  rpc_messages_test.cpp  rpc_test.cpp  skiplist_node_test.cpp  skiplist_test.cpp
